--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,5 +6,12 @@ jobs:
     steps:
       - name: Print to console
         run: echo Hello GN Actions!
+      - name: Print a few line
+        run: |
+          echo First Line!
+          echo Second line!
+          
+          
+        
         
         
